# diluted-steganography-9471-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: steganography_language_models_acrostic_hidden_messages_20260419_224505.jsonl
papers/: README.md
papers/pages/: 2505.03439_steganographic_potentials_lm_manifest.txt  2507.02737_early_signs_stego_capabilities_manifest.txt  2602.14095_nest_stego_thoughts_manifest.txt
results/: api_usage.json  experiment1_encoding.json  experiment2_extraction.json  experiment3_detection.json
src/: analyze_results.py  llm_api.py  run_experiments.py  run_remaining.py  stego_schemes.py
