[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for diluted steganography experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "httpx>=0.28.1",
    "huggingface-hub>=1.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
